Changed site text to rusiian. Added .contact-form validation

--- a/src/components/about-me/about-me.hbs
+++ b/src/components/about-me/about-me.hbs
@@ -4,38 +4,38 @@
             <img class="about-me__left-img" src="images/me.png" alt="">
         </div>
         <div class="about-me__right">
-            <h1 class="about-me__headline">About me</h1>
+            <div class="title about-me__headline">Обо мне</div>
             <div class="about-me__description">
-                <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri.</p>
-                <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei.</p>
+                <p>Всем привет. Меня зовут Леонид. Я - начинающий веб-разработчик.</p>
+                <p>Мою деятельность можно разделить на такие направления.</p>
             </div>
             <ul class="about-me__vantages">
                 <li class="about-me__vantage">
                     <img src="images/me1.png" alt="" class="about-me__vantage-icon">
                     <div class="about-me__vantage-text">
-                        <div class="about-me__vantage-title">Web Design</div>
-                        <div class="about-me__vantage-description">Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam.</div>
+                        <div class="about-me__vantage-title">HTML(pug)+CSS</div>
+                        <div class="about-me__vantage-description">Верстаю адаптивно, семантично, кроссбраузерно, Pixel perfect.</div>
                     </div>
                 </li>
                 <li class="about-me__vantage">
                     <img src="images/me2.png" alt="" class="about-me__vantage-icon">
                     <div class="about-me__vantage-text">
-                        <div class="about-me__vantage-title">Graphic Design</div>
-                        <div class="about-me__vantage-description">Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam.</div>
+                        <div class="about-me__vantage-title">js/Jquery</div>
+                        <div class="about-me__vantage-description">Интегрирую на сайт популярные плагины или напишу несложные скрипты.</div>
                     </div>
                 </li>
                 <li class="about-me__vantage">
                     <img src="images/me3.png" alt="" class="about-me__vantage-icon">
                     <div class="about-me__vantage-text">
-                        <div class="about-me__vantage-title">Online Marketing</div>
-                        <div class="about-me__vantage-description">Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam.</div>
+                        <div class="about-me__vantage-title">PHP</div>
+                        <div class="about-me__vantage-description">Знаю php на уровне, чтобы натянуть верстку на сайт на cms Wordpress.</div>
                     </div>
                 </li>
                 <li class="about-me__vantage">
                     <img src="images/me4.png" alt="" class="about-me__vantage-icon">
                     <div class="about-me__vantage-text">
-                        <div class="about-me__vantage-title">Seo</div>
-                        <div class="about-me__vantage-description">Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam.</div>
+                        <div class="about-me__vantage-title">Wordpress</div>
+                        <div class="about-me__vantage-description">Превращу html-верстку в Wordpress-тему. Внесу данные через плагин ACF.</div>
                     </div>
                 </li>
             </ul>
