--- a/src/components/main-banner/main-banner.hbs
+++ b/src/components/main-banner/main-banner.hbs
@@ -2,16 +2,16 @@
     {{> main-header }}
     <ul class="container main-banner__values">
         <li class="main-banner__value">
-            <div class="main-banner__value-title title">Values</div>
-            <div class="main-banner__value-description">Lorem ipsum dolor sit amet, ea doming until epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est.</div>
+            <div class="main-banner__value-title title">Ценности</div>
+            <div class="main-banner__value-description">У меня, как у каждого настоящего веб-разработчика есть ценности, которые я обязательно явлю миру, потенициальным клиентам и работодателям.</div>
         </li>
         <li class="main-banner__value">
-            <div class="main-banner__value-title title">Goals</div>
-            <div class="main-banner__value-description">Lorem ipsum dolor sit amet, ea doming until epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est.</div>
+            <div class="main-banner__value-title title">Цели</div>
+            <div class="main-banner__value-description">У меня, как у каждого настоящего веб-разработчика есть цели, которые я обязательно явлю миру, потенициальным клиентам и работодателям.</div>
         </li>
         <li class="main-banner__value">
-            <div class="main-banner__value-title title">Hobbies</div>
-            <div class="main-banner__value-description">Lorem ipsum dolor sit amet, ea doming until epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est.</div>
+            <div class="main-banner__value-title title">Хобби</div>
+            <div class="main-banner__value-description">У меня, как у каждого настоящего веб-разработчика есть хобби, которое я обязательно явлю миру, потенициальным клиентам и работодателям.</div>
         </li>
     </ul>
 </div>
