--- a/src/components/main-footer/main-footer.hbs
+++ b/src/components/main-footer/main-footer.hbs
@@ -1,6 +1,6 @@
 <footer class="main-footer">
     <div class="container main-footer__container">
-        <div class="main-footer__copyright">Copyright 2014 Focal - Built With Passion</div>
+        <div class="main-footer__copyright">Copyright 2019 портFolio - Леонид Зычков</div>
         <div class="main-footer__soc-media">
             {{> social-media }}
         </div>
