--- a/src/components/main-header/main-header.hbs
+++ b/src/components/main-header/main-header.hbs
@@ -1,10 +1,12 @@
 <header class="main-header">
     <div class="container main-header__container">
         <div class="main-header__logo-wrap">
+            <div class="main-header__logo-slogan main-header__logo-slogan_left"><span class="green">мое порт</span></div>
             <a href="/" class="main-header__logo">
                 <img class="main-header__logo-icon" src="images/logo-icon.png">
             </a>
-            <div class="main-header__logo-slogan">fo<span class="green">cal</span></div>
+            <div class="main-header__logo-slogan"><span class="green">olio</span></div>
+            <h1 class="main-header__site-headline">Портфолио веб-разработчика Леонида Зычкова: верстка, натяжка на Вордпресс, разработка js/jQuery скриптов</h1>
         </div>
         {{> nav }}
         <div class="main-header__social-media">
