--- a/src/components/my-porfolio/my-porfolio.hbs
+++ b/src/components/my-porfolio/my-porfolio.hbs
@@ -1,10 +1,8 @@
 <section class="my-portfolio" id="portfolio">
     <div class="container my-portfolio__container">
-        <h2>Portfolio</h2>
+        <h2>Портfolio</h2>
         <div class="my-portfolio__description">
-            <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute
-                disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae
-                pri.</p>
+            <p>Здесь работы, которые я сверстал в свободное время. Dерстаю, все, что доступно и бесплатно для скачивания.</p>
         </div>
         <ul class="my-portfolio__works-menu" id="filter">
             <li class="my-portfolio__works-menu-item">
@@ -158,15 +156,32 @@
                         <img src="images/buyheater366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
                     <div class="my-portfolio__work-hidden">
-                        <p class="my-portfolio__work-title">лендинг по продаже обогревателей</p>
+                        <p class="my-portfolio__work-title">Лендинг по продаже обогревателей</p>
                         <p class="my-portfolio__work-link">
                             <a href="http://sitesdepot.ru/st-buy-heater/" target="_blank">веб-ресурс</a>
                         </p>
                         <p class="my-portfolio__work-link">
                             <a href="https://github.com/leonziger/buy-heater" target="_blank">код на гитхабе</a>
                         </p>
-                        <p><span class="strong">Кодинг/разметка:</span> HTML(pug)+SCSS.</p>
+                        <p><span class="strong">Кодинг/разметка:</span> HTML+SCSS.</p>
                         <p><span class="strong">Плагины/библиотеки:</span> jQuery,  vanilla-text-mask, jquery.maskedinput, jquery-validation, FlipClock, vex-js.</p>
+                        <p><span class="strong">Сборка проекта:</span> gulp.</p>
+                    </div>
+                </li>
+                <li class="my-portfolio__work">
+                    <div class="my-portfolio__work-visible">
+                        <img src="images/folio366x300.png" alt="" class="my-portfolio__work-img">
+                    </div>
+                    <div class="my-portfolio__work-hidden">
+                        <p class="my-portfolio__work-title">Лендинг портфолио веб-разработчика</p>
+                        <p class="my-portfolio__work-link">
+                            <a href="https://leonziger.github.io/folio/" target="_blank">веб-ресурс</a>
+                        </p>
+                        <p class="my-portfolio__work-link">
+                            <a href="https://github.com/leonziger/folio" target="_blank">код на гитхабе</a>
+                        </p>
+                        <p><span class="strong">Кодинг/разметка:</span> HTML+SCSS.</p>
+                        <p><span class="strong">Плагины/библиотеки:</span> jQuery,  vanilla-text-mask, jquery.maskedinput, jquery-validation, slick-carousel, vex-js.</p>
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
