--- a/src/components/my-skills/my-skills.hbs
+++ b/src/components/my-skills/my-skills.hbs
@@ -1,37 +1,43 @@
 <section class="my-skills" id="skills">
     <div class="container my-skills__container">
         <div class="my-skills__left my-skills__left-correction">
-            <h2 class="my-skills__headline">My skills</h2>
-            <div class="my-skills__description">
-                <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri.</p>
-                <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei.</p>
-            </div>
+            <h2 class="my-skills__headline">Мои навыки</h2>
+            <ul class="my-skills__list">
+                <li class="my-skills__list-item">верстка из PSD/Figma/Avocode в HTML (адаптивная, семантическая,
+                    PixelPerfect);
+                </li>
+                <li class="my-skills__list-item">работа с PHP на уровне интеграции верстки;</li>
+                <li class="my-skills__list-item">HTML(БЭМ, pug)/CSS (scss);</li>
+                <li class="my-skills__list-item">js/jQuery на уровне написания скриптов / интеграции популярных плагинов;</li>
+                <li class="my-skills__list-item">натяжка верстки на cms Wordpress;</li>
+                <li class="my-skills__list-item">node, gulp, webpack, git и т.п.</li>
+            </ul>
             <div class="my-skills__button-wrapper">
-                <a href="#contact-me" class="button my-skills__button">Contact Me</a>
+                <a href="#contact-me" class="button my-skills__button">Напишите мне</a>
             </div>
         </div>
         <div class="my-skills__right my-skills__right-correction">
             <ul class="my-skills__diagram">
                 <li class="my-skills__line">
-                    <div class="my-skills__line-title">Photoshop</div>
-                    <div id="photoshop" data-progressbar="75">
+                    <div class="my-skills__line-title">HTML+CSS</div>
+                    <div id="photoshop" data-progressbar="90">
                     </div>
                 </li>
                 <li class="my-skills__line">
-                    <div class="my-skills__line-title">Illustrator</div>
-                    <div id="illustrator" data-progressbar="90">
+                    <div class="my-skills__line-title">js/jQuery</div>
+                    <div id="illustrator" data-progressbar="70">
 
                     </div>
                 </li>
                 <li class="my-skills__line">
-                    <div class="my-skills__line-title">HTML / CSS</div>
-                    <div id="htmlcss"  data-progressbar="80">
+                    <div class="my-skills__line-title">PHP</div>
+                    <div id="htmlcss"  data-progressbar="60">
 
                     </div>
                 </li>
                 <li class="my-skills__line">
-                    <div class="my-skills__line-title">PHP / MYSQL</div>
-                    <div id="phpmysql"  data-progressbar="65">
+                    <div class="my-skills__line-title">Wordpress</div>
+                    <div id="phpmysql"  data-progressbar="50">
 
                     </div>
                 </li>
