--- a/src/components/nav/nav.hbs
+++ b/src/components/nav/nav.hbs
@@ -1,9 +1,9 @@
 <nav class="main-header__nav">
-    <a href="#home" class="main-header__nav-link">Home</a>
-    <a href="#about-me" class="main-header__nav-link">About me</a>
-    <a href="#skills" class="main-header__nav-link">Skills</a>
-    <a href="#resume" class="main-header__nav-link">Resume</a>
-    <a href="#testimonials" class="main-header__nav-link">Testimonials</a>
-    <a href="#portfolio" class="main-header__nav-link">Portfolio</a>
-    <a href="#contact-me" class="main-header__nav-link">Contact me</a>
+    <a href="#home" class="main-header__nav-link">Главная</a>
+    <a href="#about-me" class="main-header__nav-link">Обо мне</a>
+    <a href="#skills" class="main-header__nav-link">Навыки</a>
+    <a href="#resume" class="main-header__nav-link">Резюме</a>
+    <a href="#testimonials" class="main-header__nav-link">Отзывы</a>
+    <a href="#portfolio" class="main-header__nav-link">Портfolio</a>
+    <a href="#contact-me" class="main-header__nav-link">Контакты</a>
 </nav>
