--- a/src/components/resume-edu-work/resume-edu-work.hbs
+++ b/src/components/resume-edu-work/resume-edu-work.hbs
@@ -1,50 +1,61 @@
 <section class="resume-edu-work" id="resume">
     <div class="my-resume">
         <div class="container my-resume__container">
-            <h2 class="my-resume__headline title">Resume</h2>
+            <h2 class="my-resume__headline title">Резюме</h2>
             <div class="my-resume__description">
-                <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute
-                    disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae
-                    pri.</p>
+                <p>Здесь надо написать пару слов о том, что у меня есть резюме. Наверное не всем удообно просматривать этот сайт о моих достижениях,  поэтому резюме можно скачать, нажав на кнопку ниже.</p>
             </div>
-            <a href="#" class="button my-resume__button">Download Resume</a>
+            <a href="#" class="button my-resume__button">Скачать резюме</a>
         </div>
     </div>
     <div class="my-edu">
         <div class="container my-skills__container my-skills__delimiter">
             <div class="my-skills__left">
-                <h2 class="my-skills__headline">My education</h2>
+                <h2 class="my-skills__headline">Мое образование</h2>
                 <div class="my-skills__description">
-                    <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri.</p>
-                    <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei.</p>
+                    <p>В 1996 г. я закончил Херсонский Государственный педагогический институ имени Н.К.Крупской по специальности "Физика-информатика" и получил право преподавать оные предметы в средней школе.</p>
+                    <p>Это было не последнее мое оффлайн/онлайн-образование, о чем я, конечно же, детально напишу.</p>
                 </div>
             </div>
             <div class="my-skills__right">
                 <ul class="my-work__jobs">
                     <li class="my-work__job">
-                        <div class="my-work__job-title">Graphic Design Diploma</div>
+                        <div class="my-work__job-title">Сертификат об окончании курсов javascript</div>
                         <div class="my-work__job-wrap">
-                            <div class="my-work__job-company">Reeves College</div>,&nbsp;
-                            <div class="my-work__job-town"></div>&nbsp;/&nbsp;
-                            <div class="my-work__job-from">June 2008</div>&nbsp;-&nbsp;
-                            <div class="my-work__job-to">May 2010</div>
+                            <div class="my-work__job-company">easycode.com.ua</div>,&nbsp;
+                            <div class="my-work__job-town">онлайн</div>&nbsp;/&nbsp;
+                            <div class="my-work__job-from">Июль 2018</div>&nbsp;-&nbsp;
+                            <div class="my-work__job-to">Декабрь 2018</div>
                         </div>
-                        <div class="my-work__job-years">4.0 GPA</div>
+                        <div class="my-work__job-years">5 месяцев</div>
                         <div class="my-work__description">
-                            <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei.</p>
+                            <p>Обучался написанию скриптов на языке Javascript.</p>
                         </div>
                     </li>
                     <li class="my-work__job">
-                        <div class="my-work__job-title">CIT Diploma</div>
+                        <div class="my-work__job-title">Сертификат об окончании курсов верстки</div>
                         <div class="my-work__job-wrap">
-                            <div class="my-work__job-company">Lethbridge College</div>,&nbsp;
-                            <div class="my-work__job-town"></div>&nbsp;/&nbsp;
-                            <div class="my-work__job-from">June 2006</div>&nbsp;-&nbsp;
-                            <div class="my-work__job-to">May 2008</div>
+                            <div class="my-work__job-company">Курсы верстки</div>,&nbsp;
+                            <div class="my-work__job-town">онлайн</div>&nbsp;/&nbsp;
+                            <div class="my-work__job-from">Май 2017</div>&nbsp;-&nbsp;
+                            <div class="my-work__job-to">Август 2017</div>
                         </div>
-                        <div class="my-work__job-years">4.0 GPA</div>
+                        <div class="my-work__job-years">4 месяца</div>
                         <div class="my-work__description">
-                            <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei.</p>
+                            <p>Обучался верстке. Сверстано 4 учебных макета.</p>
+                        </div>
+                    </li>
+                    <li class="my-work__job">
+                        <div class="my-work__job-title">Диплом преподавателя физики-информатики</div>
+                        <div class="my-work__job-wrap">
+                            <div class="my-work__job-company">ХГПИ</div>,&nbsp;
+                            <div class="my-work__job-town">Херсон</div>&nbsp;/&nbsp;
+                            <div class="my-work__job-from">Сентябрь 1991</div>&nbsp;-&nbsp;
+                            <div class="my-work__job-to">Июнь 1996</div>
+                        </div>
+                        <div class="my-work__job-years">4 года и 9 месяцев</div>
+                        <div class="my-work__description">
+                            <p>Обучался педагогике и методике преподавания физики и основ информатики и вычислительной техники в средней школе.</p>
                         </div>
                     </li>
                 </ul>
@@ -54,51 +65,63 @@
     <div class="my-work">
         <div class="container my-skills__container">
             <div class="my-skills__left">
-                <h2 class="my-skills__headline">Work Experience</h2>
+                <h2 class="my-skills__headline">Опыт работы</h2>
                 <div class="my-skills__description">
-                    <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri.</p>
-                    <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei.</p>
+                    <p>После вуза работал преподавателм информатики в Текстильном техникуме. До того как, ушел в частный бизнес, 7 лет проработал оператором ЭВМ в ПМТО "Агро-Комплект".</p>
+                    <p>Но, поскольку HRы рекомендуют указывать 3 последних и наиболее релевантных места, то именно они отображены в списке.</p>
                 </div>
             </div>
             <div class="my-skills__right">
                 <ul class="my-work__jobs">
                     <li class="my-work__job">
-                        <div class="my-work__job-title">Lead WEb Designer</div>
+                        <div class="my-work__job-title">HTML-верстальщик</div>
                         <div class="my-work__job-wrap">
-                            <div class="my-work__job-company">ABC Company</div>,&nbsp;
-                            <div class="my-work__job-town">Saskatoon</div>&nbsp;/&nbsp;
-                            <div class="my-work__job-from">June 2011</div>&nbsp;-&nbsp;
-                            <div class="my-work__job-to">Present</div>
+                            <div class="my-work__job-company">New Wave</div>,&nbsp;
+                            <div class="my-work__job-town">удаленно</div>&nbsp;/&nbsp;
+                            <div class="my-work__job-from">Февраль 2019</div>&nbsp;-&nbsp;
+                            <div class="my-work__job-to">по настоящее время</div>
                         </div>
-                        <div class="my-work__job-years">3 Years</div>
+                        <div class="my-work__job-years">меньше 1 года</div>
                         <div class="my-work__description">
-                            <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei.</p>
+                            <ul class="my-work__duties">
+                                <li class="my-work__duty">1) адаптивная верстка сайтов/лендингов</li>
+                                <li class="my-work__duty">2) разработка js/jQuery скриптов</li>
+                                <li class="my-work__duty">3) натяжка сайтов/лендингов на cms Wordpress</li>
+                                <li class="my-work__duty">4) верстка/сборка отдельных страниц для сайта на cms Drupal</li>
+                            </ul>
                         </div>
                     </li>
                     <li class="my-work__job">
-                        <div class="my-work__job-title">Junior Designer</div>
+                        <div class="my-work__job-title">контент-менеджер</div>
                         <div class="my-work__job-wrap">
-                            <div class="my-work__job-company">XYZ Company</div>,&nbsp;
-                            <div class="my-work__job-town">Lethbridge</div>&nbsp;/&nbsp;
-                            <div class="my-work__job-from">June 2008</div>&nbsp;-&nbsp;
-                            <div class="my-work__job-to">June 2009</div>
+                            <div class="my-work__job-company">Viweb</div>,&nbsp;
+                            <div class="my-work__job-town">Херсон</div>&nbsp;/&nbsp;
+                            <div class="my-work__job-from">Февраль 2016</div>&nbsp;-&nbsp;
+                            <div class="my-work__job-to">Февраль 2019</div>
                         </div>
-                        <div class="my-work__job-years">1 Year</div>
+                        <div class="my-work__job-years">3 года</div>
                         <div class="my-work__description">
-                            <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei.</p>
+                            <ul class="my-work__duties">
+                                <li class="my-work__duty">1) работа с контентом интернет-магазинов на движках Prestashop, Shop-Script </li>
+                                <li class="my-work__duty">2) работа с контентом сайтов на CMS Joomla, Wordpress, modx Revolution</li>
+                            </ul>
                         </div>
                     </li>
                     <li class="my-work__job">
-                        <div class="my-work__job-title">Web Developer</div>
+                        <div class="my-work__job-title">Собственник бизнеса</div>
                         <div class="my-work__job-wrap">
-                            <div class="my-work__job-company">The Company</div>,&nbsp;
-                            <div class="my-work__job-town">Lethbridge</div>&nbsp;/&nbsp;
-                            <div class="my-work__job-from">June 2008</div>&nbsp;-&nbsp;
-                            <div class="my-work__job-to">June 2007</div>
+                            <div class="my-work__job-company">Kherson Rental apartments</div>,&nbsp;
+                            <div class="my-work__job-town">Херсон</div>&nbsp;/&nbsp;
+                            <div class="my-work__job-from">Сентябрь 2001</div>&nbsp;-&nbsp;
+                            <div class="my-work__job-to">Март 2017</div>
                         </div>
-                        <div class="my-work__job-years">1 Year</div>
+                        <div class="my-work__job-years">15 лет и 7 месяцев</div>
                         <div class="my-work__description">
-                            <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei.</p>
+                            <ul class="my-work__duties">
+                                <li class="my-work__duty">1) посуточная аренда квартир в г.Херсон </li>
+                                <li class="my-work__duty">2) встреча гостей в аэропортах Украины </li>
+                                <li class="my-work__duty">3) перевозка гостей в пределах Украины </li>
+                            </ul>
                         </div>
                     </li>
 
