--- a/src/components/testimonials/testimonials.hbs
+++ b/src/components/testimonials/testimonials.hbs
@@ -3,21 +3,21 @@
         <div class="testimonials__slider">
             <div class="testimonial">
                 <div class="testimonial__body">
-                    <p>“Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri. Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam.”</p>
+                    <p>“Давно приглядываюсь к работам Леонида. Делал тестовое задание на одну из наших вакансий. Старательный, дотошный, исполнительный. Перспективный верстальщик. Необходимо подтянуть javascript и расти дальше до фронтенд-разработчика.”</p>
                 </div>
-                <div class="testimonial__author">John Stone</div>
+                <div class="testimonial__author">Алексей Зайцев, "Z-media"</div>
             </div>
             <div class="testimonial">
                 <div class="testimonial__body">
-                    <p>“Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri. Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam.”</p>
+                    <p>“Давно приглядываюсь к работам Леонида. Делал тестовое задание на одну из наших вакансий. Старательный, дотошный, исполнительный. Перспективный верстальщик. Необходимо подтянуть javascript и расти дальше до фронтенд-разработчика.”</p>
                 </div>
-                <div class="testimonial__author">Barbara Doe</div>
+                <div class="testimonial__author">Артур Попрыгайцев, "P-media"</div>
             </div>
             <div class="testimonial">
                 <div class="testimonial__body">
-                    <p>“Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri. Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam.”</p>
+                    <p>“Давно приглядываюсь к работам Леонида. Делал тестовое задание на одну из наших вакансий. Старательный, дотошный, исполнительный. Перспективный верстальщик. Необходимо подтянуть javascript и расти дальше до фронтенд-разработчика.”</p>
                 </div>
-                <div class="testimonial__author">Chloe Murray</div>
+                <div class="testimonial__author">Артем Добивайцев, "D-media"</div>
             </div>
         </div>
     </div>
