--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>my portFolio - Мое портфолио</title>
+    <title>ПортFolio веб-разработчика Леонида Зычкова</title>
+    <meta name="keywords" content="HTML верстка, натяжка на Вордпресс, разработка js/jQuery скриптов"
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
     <script>var FontAwesomeConfig = {
