--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -13,9 +13,17 @@
 }
 
 ::placeholder {
-  font-size: 16px;
-  color: #23292e;
-  letter-spacing: 0.32px;
+  color: #fff;
+
+  @media(max-width: 375px){
+    font-size: 14px;
+  }
+}
+
+textarea {
+  &::placeholder {
+    color: #fff;
+  }
 
   @media(max-width: 375px){
     font-size: 14px;
