--- a/src/components/contact-me/contact-me.scss
+++ b/src/components/contact-me/contact-me.scss
@@ -26,6 +26,7 @@
       width: 100%;
       padding-bottom: 40px;
       padding-right: 0;
+      display: none;
     }
   }
 
@@ -35,6 +36,7 @@
     padding-left: 49px;
 
     @media(max-width: 992px) {
+      padding-top: 0;
       padding-left: 0;
       width: 100%;
     }
@@ -62,16 +64,16 @@
     }
   }
 
-  &__form {
+}
+
+.contact-form {
     max-width: 540px;
     align-self: center;
     @media(max-width: 992px) {
       margin: 0 auto;
     }
 
-
-
-    &-field {
+    &__field {
       width: 100%;
       height: 56px;
       background-color: #4b5456;
@@ -80,26 +82,25 @@
       font-size: 18px;
     }
 
-    &-area {
+    &__area {
       width: 100%;
       height: 279px;
       background-color: #4b5456;
       outline: none;
       border: 0;
+      color: #fff;
+      font-size: 18px;
+      padding: 20px;
     }
+
+
+  &__error-message {
+    color: #fff;
   }
 
   &__field {
     &-wrap {
       margin-bottom: 32px;
-    }
-
-    &-name {
-      color: #fff;
-      font-size: 18px;
-      font-weight: 400;
-      line-height: 30px;
-      margin-bottom: 11px;
     }
   }
 
