--- a/src/components/main-header/main-header.scss
+++ b/src/components/main-header/main-header.scss
@@ -10,6 +10,9 @@
     justify-content: space-between;
   }
 
+  &__site-headline {
+    display: none;
+  }
   &__logo {
     display: flex;
     align-items: center;
@@ -30,10 +33,12 @@
       font-size: 30px;
       font-weight: 700;
       line-height: 42px;
-      padding-left: 20px;
+      //padding-left: 20px;
 
-      @media(max-width: 1200px) {
-        padding-left: 5px;
+      &_left {
+        @media(max-width: 375px) {
+          display: none;
+        }
       }
     }
   }
@@ -99,7 +104,7 @@
       display: block;
     }
 
-    @media(max-width: 576px) {
+    @media(max-width: 640px) {
       display: none;
     }
   }
