--- a/src/components/my-skills/my-skills.scss
+++ b/src/components/my-skills/my-skills.scss
@@ -44,7 +44,7 @@
       justify-content: center;
       padding-left: 0;
       padding-right: 0;
-      padding-top: 0;
+      padding-top: 35px;
       width: 100%;
     }
 
@@ -77,8 +77,13 @@
     }
   }
 
-  &__description {
+  &__list {
     margin-bottom: 40px;
+    margin-left: 20px;
+
+    &-item {
+      list-style: circle;
+    }
   }
 
   &__button {
