--- a/src/components/resume-edu-work/resume-edu-work.scss
+++ b/src/components/resume-edu-work/resume-edu-work.scss
@@ -63,6 +63,11 @@
     padding-top: 50px;
   }
 
+  &__duties {
+    margin-top: 0.7rem;
+    margin-bottom: 1.7rem;
+  }
+
   &__jobs {
     display: flex;
     flex-direction: column;
@@ -96,12 +101,13 @@
     }
 
     &-years {
-      display: flex;
+      display: inline;
       align-items: center;
       justify-content: center;
-      width: 71px;
-      height: 29px;
+      align-self: flex-start;
+      min-width: 71px;
       background-color: #2ecc71;
+      padding: 5px 15px;
       color: #fff;
       font-size: 14px;
       font-weight: 700;
