--- a/src/components/social-media/social-media.hbs
+++ b/src/components/social-media/social-media.hbs
@@ -1,20 +1,17 @@
 <div class="social-media">
-    <a href="#" class="social-media__item social-media__item_twitter">
-        <i class="fab fa-twitter"></i>
+    <a href="https://github.com/leonziger" target="_blank"  class="social-media__item social-media__item_github">
+        <i class="fab fa-github-alt"></i>
     </a>
-    <a href="#" class="social-media__item social-media__item_facebook">
+    <a href="https://www.facebook.com/leonid.zichkov.1" target="_blank" class="social-media__item social-media__item_facebook">
         <i class="fab fa-facebook-f"></i>
     </a>
-    <a href="#" class="social-media__item social-media__item_pinterest">
-        <i class="fab fa-pinterest-p"></i>
-    </a>
-    <a href="#" class="social-media__item social-media__item_gplus">
-        <i class="fab fa-google-plus-g"></i>
-    </a>
-    <a href="#" class="social-media__item social-media__item_behance">
-        <i class="fab fa-behance"></i>
-    </a>
-    <a href="#" class="social-media__item social-media__item_linkedin">
+    <a href="https://www.linkedin.com/in/leonid-zichkov/"  target="_blank" class="social-media__item social-media__item_linkedin">
         <i class="fab fa-linkedin-in"></i>
+    </a>
+    <a href="https://moikrug.ru/buldog52"  target="_blank" class="social-media__item social-media__item_moikrug">
+        <i class="fas fa-user"></i>
+    </a>
+    <a href="https://vk.com/id241539225"  target="_blank" class="social-media__item social-media__item_vk">
+        <i class="fab fa-vk"></i>
     </a>
 </div>
